@@ -749,6 +749,13 @@ int i, sv, wlen;
 bool leftenter = true;
 const String &pattern = *global_pattern;
 
+#ifdef WIN32
+//check for stack overflow
+if ((unsigned int)(&leftenter)<0x00033333 ){
+  return false;
+}
+#endif
+
   if (!re){
     re = prev->parent;
     leftenter = false;
